# ai-engineering-hub

./: .gitignore  README.md  bigquery-ethereum-tokens.ipynb  mcp_tool_gcloud.py
BlockchainVerifier/: PRD.md  Usability_Analysis.md  idea.md
CloudCostAnalyzerAgent/: README.md
NLP-to-SQL-Agent/: PRD.md  SUCCESS_SUMMARY.md  pyproject.toml  readme.md  requirements.txt  test_env.py
NLP-to-SQL-Agent/src/: MCPClient.py  __init__.py  demo.py  demo_cloud.py  demo_complete.py  main.py
NLP-to-SQL-Agent/src/agent/: __init__.py  answer_agent.py  nl2sql_agent.py  table_selector.py
gcp_mcp_server/: .dockerignore  DOCKER_USAGE.md  Dockerfile  Dockerfile.public  KNOWLEDGE_BASE_GUIDE.md  QUICK_START.md  README.md  To-do.md  docker-compose.yml  fastmcp_test_client.py  main.py  pyproject.toml  run-server.ps1  run-server.sh  server.py  test_knowledge_base.py
gcp_mcp_server/client/: CLIENT_USAGE_GUIDE.md  MCPClient.py  SyncMCPClient.py  __init__.py  demo_client.py  test_client.py
gcp_mcp_server/controller/: schema_context.py
setup_guide/: pyenv_setup_guide.md  uv_guide.md
