[project]
name = "nlp-to-sql-agent"
version = "0.1.0"
description = "A project that converts natural language queries into SQL queries using DSPy and FastMcp."
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "dspy-ai",
    "fastmcp",
    "pandas",
    "sqlalchemy",
    "numpy",
    "pytest",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
